LO 3.5 windows 7 64 bits When i copy 1 cel to more rules it is oke, but when i copy 2 colomns and 1 rule to more other rules the function for paste is away.
Do you mean row instead of rule?
Yes right i mean row.
Thanks for the report Frank. so for convenience a few simple steps to reproduce: - add some data in A1 and B1 - select those cells and copy - select A2:A4 > Context menu paste (special) and menu Edit Paste (Special) are not available.
Hi Frank :-) Mind that the field Version is meant for the "earliest" version in which the bug is found. (probably it is even older then 3.5.0 release, but I can't confirm that). I understand however, that the bug is present too in the daily/master builds. Thanks for confirming that.
CONFIRMED in 3.5.3.2 and master (version 3.6.0alpha0+ (Build ID: 46e18bc)) on Linux/x86 MAB candidate IMO. How to add/nominate?
The issue was not before 3.5.0, in 3.4.6 was it oke. In 3.5.2 windows 7 64 bits is this principle also applies here. I hope it can to solve 3.5.4???????
Already in 3.5.0RC2, but not in Beta0
The problem is not 100% reproducible for me sometimes it works, most times not (with "LibreOffice 3.5.3.2 (RC2) German UI/Locale [Build-ID: 235ab8a-3802056-4a8fed3-2d66ea8-e241b80] on German WIN7 Home Premium (64bit)) It's a little strange that the vertical direction is not affected. This one looks very similar like "Bug 46855 - Special Paste will not work when copying multiple cells to a range", what seems to be a DUP. @Kohei: Please set Status to ASSIGNED and add yourself to "Assigned To" if you accept this Bug
OS due to Comment 5
(In reply to comment #5) > CONFIRMED in 3.5.3.2 and master (version 3.6.0alpha0+ (Build ID: 46e18bc)) on > Linux/x86 > > MAB candidate IMO. How to add/nominate? Yes, on x86_64
(In reply to comment #5) > CONFIRMED in 3.5.3.2 and master (version 3.6.0alpha0+ (Build ID: 46e18bc)) on > Linux/x86 > > MAB candidate IMO. How to add/nominate? Yes, on x86_64 But not MAB... not really a critical bug.
@ nino: (In reply to comment #5) > CONFIRMED in 3.5.3.2 and master (version 3.6.0alpha0+ (Build ID: 46e18bc)) on > Linux/x86 > Are you really sure? I've *never* been able to confirm this bug in *any* version in Linux. Also not on version 3.6.0alpha0+ Build ID: 6577e56 (May 3rd). However, on Win7 in VirtualBox, I can easilly confrim this in 3.5.x
@Cor: Sorry, I can't investigate this ATM as my main Box has crashed yesterday. Will probably take a couple of weeks to fix it as my time is rather limited.
Reproducable Mac OSX 10.7.3; LibreOffice 3.5.3.2 (Build ID: 235ab8a-3802056-4a8fed3-2d66ea8-e241b80); Dutch UI
Reproducable Linux/ubuntu; LibreOffice 3.5.3.2 (Build ID: 350m1(Build:202) Context menu paste is available and menu Edit Paste (Special) are available. Contect menu (right mouse click) paste special is not available.
(In reply to comment #15) > Reproducable > > Linux/ubuntu; LibreOffice 3.5.3.2 (Build ID: 350m1(Build:202) > Context menu paste is available and menu Edit Paste (Special) are available. > Contect menu (right mouse click) paste special is not available. Context menu paste Special is not available in menu Edit Paste Special.
(In reply to comment #4) > Hi Frank :-) > Mind that the field Version is meant for the "earliest" version in which the > bug is found. (probably it is even older then 3.5.0 release, but I can't > confirm that). > I understand however, that the bug is present too in the daily/master builds. > Thanks for confirming that. CONFIRMED in master (version 3.6.0alpha0+ (Build ID: fbd82ae)) on win xp 32bit
The bug begin by Linux 3.5.0-beta1-a - Build ID: 202fca9-7f15fca-1f1fd1a-ca8e46d-5bcbce4 Linux 3.4.6 3.5.0-beta1-a 3.5.3.2 (Build-id: 350m1(build:2)) Context available Yes No No Context active Yes No No Short cut active Yes No No Menu edit available Yes Yes Yes Menu edit active Yes No No Windows 7-64 bits 3.4.6 3.5.0-RC2 3.5.4.2 3.6.0.0.beta2 (Bouw-id: f010139) Context available Yes No No No Context active Yes No No No Short cut active Yes No No No Menu edit available Yes No No No Menu edit active Yes No No No LO Versie 3.6.0.0.beta2 (Bouw-id: f010139) windows 7-64 bits context menu paste and past special are not available context menu paste only → are present, but not useful menu edit past and past special are not available
Created attachment 63741 [details] bug in versies
*** Bug 46855 has been marked as a duplicate of this bug. ***
ok, I think there are 2 issues going on here a) It appears that the paste-special ( edit menu ) and paste-special ( cell context menu ) sometimes appear to be out of sync. This only happens on linux and despite my best efforts to waste time ( I spent hours dumping printf(s) into the wrong class ) this appears to be intentional. http://opengrok.libreoffice.org/xref/core/framework/source/uielement/menubarmanager.cxx#505 which afaict has been in the source code since libreoffice's code base was populated from openoffice b) selecting some ranges of text renders makes paste special become unavailable. As for a) I do notice that for calc we do actually appear to actively set/reset the state associated paste-special. I will commit a patch to ensure that for calc at least paste-special ( edit ) & the paste-special ( context ) will be synchonized. By that I mean if 'paste-special' is not available in the context menu it will not be available ( or disabled ) in the 'edit' menu from the application. I think this might at least ease the confusion For b) firstly I was never able to reproduce the scenario in comment #3. That said there is a rule associated with the shape of the source and destination ranges that determines if the paste-special can be used. The rule is simply if the destination is a range then if the row or col of the destination range is not an exact multiple of the source range paste-special should be disabled. In essence I think the root of this bug is confusion as to when exactly it is possible to use paste-special.
Noel Power committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=7bfb229230a439c2edb3e8452fe0d3430f9931ce sync cell context menu & edit menu 'PasteSpecial' entries for calc fdo#46250
I think we should close this bug ( please re-open if you feel wronged ) My reason is that I cannot ( and it seems that I am not alone reproduce a situation where it's indicated that paste-special ( in context menu ) should work and it then doesn't. Granted on linux ( prior to my patch above ) the context menu and the edit menu disagreed ( because paste-special was hardcoded to be always 'enabled'in the edit menu )
Noel Power committed a patch related to this issue. It has been pushed to "libreoffice-3-6": http://cgit.freedesktop.org/libreoffice/core/commit/?id=9082c45b911ff605622cf67007c79a244a230e7b&g=libreoffice-3-6 sync cell context menu & edit menu 'PasteSpecial' entries for calc fdo#46250 It will be available in LibreOffice 3.6.2.
Noel Power committed a patch related to this issue. It has been pushed to "libreoffice-3-5": http://cgit.freedesktop.org/libreoffice/core/commit/?id=6719ef77c4068c8d02eb0f690dfd3bc0c61cb58d&g=libreoffice-3-5 sync cell context menu & edit menu 'PasteSpecial' entries for calc fdo#46250 It will be available in LibreOffice 3.5.7.
Thanks for take time for the issue all off you. I have check the issue is solved in the daily build on 19-08 Version 3.6.2.0+ (Build ID: 2009b20) Windows 7 64 bits. But i can't see that the issue is solved in this build. Further reaction too comment 23: in LO 3.3 windows i can see that past-special is working correct and in LO 3.5 and later it doesn't work correct. The paste-only didn't work correct. Further information: this issue is oke when paste too 1 row and not too more rows. I hope there is any time re-attention for this issue.
(In reply to comment #12) > I've *never* been able to confirm this bug in *any* version in Linux. Also not > on version 3.6.0alpha0+ Build ID: 6577e56 (May 3rd). > > However, on Win7 in VirtualBox, I can easilly confrim this in 3.5.x I think I was drunk when I wrote that, or simply made a big mistake. Apologies, but I can easily reproduce the bug, with the description given in comment 3.
Hi Noel, Thanks for investigating, explaining... (In reply to comment #21) > ok, I think there are 2 issues going on here > > As for a) I do notice that for calc we do actually appear to actively . > set/reset the state associated paste-special. > I will commit a patch to ensure that for thanks! > For b) firstly I was never able to reproduce the scenario in comment #3. There seems to have been a moment (see my previous comment) that I had the same. > That > said there is a rule associated with the shape of the source and destination > ranges that determines if the paste-special can be used. > The rule is simply if > the destination is a range then if the row or col of the destination range is > not an exact multiple of the source range paste-special should be disabled. > > In essence I think the root of this bug is confusion as to when exactly it is > possible to use paste-special. OK, that makes is more clear. So, if in the example of comment 3, I do the following copy A1:B1 select A2:B4 indeed, paste special is available. Still, the questioin remains, why has the behavious for the case as described in this bug changed compared to LibreOffice 3.4.x , and is that change really necessary, or a regression (as indicated in the field Keywords).
NOT reproduicble with parallel installation of Master "LOdev 3.7.0.0.alpha0+ - ENGLISH UI [Build ID: 6900781]" {tinderbox: 2008R2@20, pull time 2012-08-25 21:36:16} on WIN7 Home Premium (64bit) and proceeding as per Comment 3. Also works fine with "LibreOffice 3.6.1.2 German UI/Locale [Build-ID: e29a214] on German WIN7 Home Premium (64bit) @vlb: you are one of the uncommunicative ones? Don't be shy, tell us some more concerning your observations!
Tanks for answer, i think that the check isn't correct at comment 3. reproduicble comment 3 (see also comment 26) by windows 7 professional 64 bits - master LO Version 3.7.0.0.alpha0+ (Build ID: 43b6f77) date 26-08-12 - Version 3.6.2.0+ (Build ID: a11a335)date 24-08-12 the steps to reproduce the bug(comment 3): - add some data in A1 and B1 - select those cells and copy - select A2:A4 Context menu paste (special), paste (only) and menu Edit Paste (Special)are not available. the steps to NOT-reproduce: 1) - add some data in A1 and B1 - select those cells and copy - select A2:B4 2) - add some data in A1 and B1 - select those cells and copy - select A2
Hi Rainer, (In reply to comment #29) > NOT reproduicble with parallel installation of Master "LOdev 3.7.0.0.alpha0+ > - ENGLISH UI [Build ID: 6900781]" {tinderbox: 2008R2@20, pull time 2012-08-25 > 21:36:16} on WIN7 Home Premium (64bit) and proceeding as per Comment 3. > > Also works fine with "LibreOffice 3.6.1.2 German UI/Locale [Build-ID: > e29a214] on German WIN7 Home Premium (64bit) I can reproduce the bug with 361rc2 on both Ubuntu and Windows 7, and confirm the information as given by Frank (vlb)
It seems I made a mistake modifying the summary 2012-05-04. Is: EDITING: Paste and Paste Special not available for horizontally adjacent cells to horizontal cell selection Should be: EDITING: Paste and Paste Special not available for horizontally adjacent cells to VERTICAL cell selection By influence of the summary line id did NOT the test due to Comment 3 "Paste to A2:A4", but "Paste to A2:C4", what works. Please excuse me for the negligence Now I can confirm that paste to A2:A4 still causes problems, I still have to think about the results.
(In reply to comment #28) > Hi Noel, > > Still, the questioin remains, why has the behavious for the case as described > in this bug changed compared to LibreOffice 3.4.x , and is that change really > necessary, or a regression (as indicated in the field Keywords). Not sure, all I can say is the change is intentional, will try to find out more, sorry not being unresponsive, kept meaning to come back to this but keep getting side-lined.
Noel Power committed a patch related to this issue. It has been pushed to "libreoffice-3-6": http://cgit.freedesktop.org/libreoffice/core/commit/?id=7da3738ab903a180b5038ee92ad40869fdbff950&g=libreoffice-3-6 fdo#46250: Allow paste & paste special for unmatching dest (single) range. It will be available in LibreOffice 3.6.2.
marking as fixed