sync cell context menu & edit menu 'PasteSpecial' entries for calc fdo#46250

calc application specifically handles PasteSpecial so no need to set the state of the menu entry to enabled always ( for calc at least )

Change-Id: Iaf13dd825f0cbdcf9f455db07d727753fae90868