framework/source/uielement/menubarmanager.cxx
@@ -505,7 +505,9 @@ throw ( RuntimeException )
                 #ifdef UNIX
                 //enable some slots hardly, because UNIX clipboard does not notify all changes
                 // Can be removed if follow up task will be fixed directly within applications.
-                if ( pMenuItemHandler->aMenuItemURL == ".uno:Paste" || pMenuItemHandler->aMenuItemURL == ".uno:PasteSpecial"
+                // Note: PasteSpecial is handled specifically by calc
+                if ( pMenuItemHandler->aMenuItemURL == ".uno:Paste" ||
+                    ( m_aModuleIdentifier != "com.sun.star.sheet.SpreadsheetDocument" && pMenuItemHandler->aMenuItemURL == ".uno:PasteSpecial" )
                     || pMenuItemHandler->aMenuItemURL == ".uno:PasteClipboard" )      // special for draw/impress
                     bEnabledItem = sal_True;
                 #endif
